welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: not found: value compteur
		compteur = compteur + 1;
                ^countTeen:6: error: not found: value compteur
		compteur = compteur + 1;
                ^countTeen:9: error: not found: value compteur
		compteur = compteur + 1;
                ^countTeen:12: error: not found: value compteur
		compteur = compteur + 1;
                ^countTeen:14: error: not found: value compteur
	return compteur
               ^