welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	if (a<=19 && a>=13) {
		compteur = compteur + 1;
	}
	if (b<=19 && b>=13) {
		compteur = compteur + 1;
	}
	if (c<=19 && d>=13) {
		compteur = compteur + 1;
	}
	if (d<=19 && d>=13) {
		compteur = compteur + 1;
	}
	return compteur
}	